Deployment/Kubernetes/Server/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: pe
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
